--- a/java03_LibraryProgram/.classpath
+++ b/java03_LibraryProgram/.classpath
@@ -6,9 +6,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/PC/git/Java_Project/miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="C:/Users/PC/git/Java_Project/jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/PC/git/Java_Project/jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/PC/git/Java_Project/miglayout-src.zip"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Team_Project/Java_Project/miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Team_Project/Java_Project/jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Team_Project/Java_Project/miglayout-src.zip"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Team_Project/Java_Project/jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
