--- a/java03_LibraryProgram/.classpath
+++ b/java03_LibraryProgram/.classpath
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/jgoodies-forms-1.8.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/miglayout15-swing.jar"/>
-	<classpathentry exported="true" kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/miglayout-src.zip"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/miglayout15-swing.jar"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/miglayout-src.zip"/>
+	<classpathentry kind="lib" path="U:/2021 2학기 대학교 자료/2021 Programming JAVA/Java_Project/mssql-jdbc-9.4.1.jre16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
