--- a/java03_LibraryProgram/.settings/org.eclipse.core.resources.prefs
+++ b/java03_LibraryProgram/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/Member/MemberAmend.java=UTF-8
+encoding//src/Member/MemberRegister.java=UTF-8
 encoding//src/Member/MemberSearch.java=UTF-8
